# ID-Preservation-Controllable-Generation

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-full.txt  requirements.txt  setup.cfg  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: COMFYUI_BEGINNER_GUIDE.md  REAL_BACKEND.md  SAFETY.md
examples/: comfyui_full_pipeline_request.yaml  comfyui_lora_openpose_request.json  comfyui_lora_openpose_request.yaml  comfyui_request.json  comfyui_request.yaml  generation_request.json  generation_request.yaml  run_demo.py
scripts/: create_demo_refs.ps1  start_comfyui.ps1  stop_comfyui.ps1  train_lora_sdxl.py
src/id_preservation_cg/: __init__.py  backends.py  cli.py  config.py  controllers.py  dataset.py  lora.py  pipeline.py  semantic.py  tagging.py  validation.py
src/id_preservation_cg/assets/: __init__.py
tests/: test_backends.py  test_cli.py  test_comfyui_client.py  test_config.py  test_lora.py  test_pipeline.py  test_validation.py
workflows/: comfyui_api_full_pipeline.json  comfyui_api_lora_openpose.json  comfyui_api_txt2img.json  comfyui_workflow.json
