[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "id-preservation-controllable-generation"
version = "0.1.0"
description = "A modular ID-preserving controllable text-to-image generation scaffold."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
  { name = "AIGC Lab" }
]
keywords = [
  "ID-Preservation",
  "Controllable-Generation",
  "LoRA",
  "IP-Adapter",
  "ControlNet",
  "ComfyUI",
  "SDXL",
  "HunyuanDiT"
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pyyaml>=6.0"
]
full = [
  "accelerate>=0.30",
  "diffusers>=0.28",
  "transformers>=4.41",
  "torch>=2.2",
  "pillow>=10.0",
  "opencv-python>=4.9",
  "numpy>=1.26",
  "pyyaml>=6.0"
]

[project.scripts]
idpcg = "id_preservation_cg.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
id_preservation_cg = ["assets/*.json"]

[tool.uv]
package = true
