[metadata]
name = id-preservation-controllable-generation
version = 0.1.0
description = A modular ID-preserving controllable text-to-image generation scaffold.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
keywords = ID-Preservation, Controllable-Generation, LoRA, IP-Adapter, ControlNet, SDXL, HunyuanDiT

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    idpcg = id_preservation_cg.cli:main

[options.package_data]
id_preservation_cg =
    assets/*.json

[options.extras_require]
full =
    accelerate>=0.30
    diffusers>=0.28
    transformers>=4.41
    torch>=2.2
    pillow>=10.0
    opencv-python>=4.9
    numpy>=1.26
dev =
    pyyaml>=6.0
